--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
                 <img class="img" src="/assets/Camera.jpg">
               </li>
               <h5 class="first col-sm-4 col-xs-12">
-                Output on <b>GOOGLE LENS</b> - 
-                <span> </span>
+                Output on <b>GOOGLE LENS</b>  -
+                <span>CAMERA</span>
               </h5>
               <h5 class="second col-sm-4 col-xs-12">
                 Output on <b>Mobilenet Model </b> - 
-                <span> </span>
+                <span>QHMPL USB Camera</span>
               </h5>
               <div class="mini_result" class="col-xs-12">
                 <h4>Result - </h4>
@@ -44,11 +44,11 @@
               </li>
               <h5 class="first col-sm-4 col-xs-12">
                 Output on <b>GOOGLE LENS</b> - 
-                <span> </span>
+                <span>Fan Capacitor</span>
               </h5>
               <h5 class="second col-sm-4 col-xs-12">
                 Output on <b>Mobilenet Model </b> - 
-                <span> </span>
+                <span>Capacitor</span>
               </h5>
               <div class="mini_result" class="col-xs-12">
                 <h4>Result - </h4>
@@ -63,11 +63,11 @@
               </li>
               <h5 class="first col-sm-4 col-xs-12">
                 Output on <b>GOOGLE LENS</b> - 
-                <span> </span>
+                <span>VIVO 44W USB Charger Type-C</span>
               </h5>
               <h5 class="second col-sm-4 col-xs-12">
                 Output on <b>Mobilenet Model </b> - 
-                <span> </span>
+                <span>Mobile Charger</span>
               </h5>
               <div class="mini_result" class="col-xs-12">
                 <h4>Result - </h4>
@@ -82,11 +82,11 @@
               </li>
               <h5 class="first col-sm-4 col-xs-12">
                 Output on <b>GOOGLE LENS</b> - 
-                <span> </span>
+                <span>Enter E-D4G+ 4G Data Card With WiFi</span>
               </h5>
               <h5 class="second col-sm-4 col-xs-12">
                 Output on <b>Mobilenet Model </b> - 
-                <span> </span>
+                <span>USB Card</span>
               </h5>
               <div class="mini_result" class="col-xs-12">
                 <h4>Result - </h4>
@@ -101,11 +101,11 @@
               </li>
               <h5 class="first col-sm-4 col-xs-12">
                 Output on <b>GOOGLE LENS</b> - 
-                <span> </span>
+                <span>VIVO EarPhone</span>
               </h5>
               <h5 class="second col-sm-4 col-xs-12">
                 Output on <b>Mobilenet Model </b> - 
-                <span> </span>
+                <span>EarPhone</span>
               </h5>
               <div class="mini_result" class="col-xs-12">
                 <h4>Result - </h4>
@@ -120,11 +120,11 @@
               </li>
               <h5 class="first col-sm-4 col-xs-12">
                 Output on <b>GOOGLE LENS</b> - 
-                <span> </span>
+                <span>V88R Mini KeyBoard + Mouse</span>
               </h5>
               <h5 class="second col-sm-4 col-xs-12">
                 Output on <b>Mobilenet Model </b> - 
-                <span> </span>
+                <span>Mini Keyboard</span>
               </h5>
               <div class="mini_result" class="col-xs-12">
                 <h4>Result - </h4>
@@ -139,11 +139,11 @@
               </li>
               <h5 class="first col-sm-4 col-xs-12">
                 Output on <b>GOOGLE LENS</b> - 
-                <span> </span>
+                <span>Prodot 3D Optical Mouse (Black)</span>
               </h5>
               <h5 class="second col-sm-4 col-xs-12">
                 Output on <b>Mobilenet Model </b> - 
-                <span> </span>
+                <span>Optical Mouse</span>
               </h5>
               <div class="mini_result" class="col-xs-12">
                 <h4>Result - </h4>
@@ -158,11 +158,11 @@
               </li>
               <h5 class="first col-sm-4 col-xs-12">
                 Output on <b>GOOGLE LENS</b> - 
-                <span> </span>
+                <span>GPRS SIM Card</span>
               </h5>
               <h5 class="second col-sm-4 col-xs-12">
                 Output on <b>Mobilenet Model </b> - 
-                <span> </span>
+                <span>SIM Card</span>
               </h5>
               <div class="mini_result" class="col-xs-12">
                 <h4>Result - </h4>
@@ -177,11 +177,11 @@
               </li>
               <h5 class="first col-sm-4 col-xs-12">
                 Output on <b>GOOGLE LENS</b> - 
-                <span> </span>
+                <span>Airtel 5G New SIM Card or MNP Port Sachet</span>
               </h5>
               <h5 class="second col-sm-4 col-xs-12">
                 Output on <b>Mobilenet Model </b> - 
-                <span> </span>
+                <span>AIRTEL SIM Card Sachet</span>
               </h5>
               <div class="mini_result" class="col-xs-12">
                 <h4>Result - </h4>
@@ -196,11 +196,11 @@
                 </li>
                 <h5 class="first col-sm-4 col-xs-12">
                   Output on <b>GOOGLE LENS</b> - 
-                  <span> </span>
+                  <span>USB Data Cable Type-C</span>
                 </h5>
                 <h5 class="second col-sm-4 col-xs-12">
                   Output on <b>Mobilenet Model </b> - 
-                  <span> </span>
+                  <span>USB Data Cable</span>
                 </h5>
                 <div class="mini_result" class="col-xs-12">
                   <h4>Result - </h4>
@@ -209,10 +209,13 @@
                 </div>
               </div>
           </ol>
-
+          <br><br><br><br><br><br>
     </center>
+    <h6 class="bottom1">
+      I Have Tested 10 Images <b>GOOGLE LENS</b> Have Predicted 8 Of Them More Accurately And <b>MOBILE NET</b> Was Less Accurately So According To My Case Study <b>GOOGLE LENS</b> Is More Accurate.
+    </h6><br><br>
     <div class="copy_right_footer">
-      Developed By :- <h6>Anupam Swami</h6>
+      Developed By :- Anupam Swami
     </div>
 </body>
 </html>
