--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="test_image_and_result1 col-xs-12">
               <li class="col-sm-4 col-xs-12">
                 <b class="white1">Test Image - </b>
-                <img class="img" src="/assets/Camera.jpg">
+                <img class="img" src="assets/Camera.jpg">
               </li>
               <h5 class="first col-sm-4 col-xs-12">
                 Output on <b>GOOGLE LENS</b>  -
@@ -40,7 +40,7 @@
             <div class="test_image_and_result2 col-xs-12">
               <li class="col-sm-4 col-xs-12">
                 <b class="white2">Test Image - </b>
-                <img class="img" src="/assets/Capacitor.jpg">
+                <img class="img" src="assets/Capacitor.jpg">
               </li>
               <h5 class="first col-sm-4 col-xs-12">
                 Output on <b>GOOGLE LENS</b> - 
@@ -59,7 +59,7 @@
             <div class="test_image_and_result3 col-xs-12">
               <li class="col-sm-4 col-xs-12">
                 <b class="white3">Test Image - </b>
-                <img class="img" src="/assets/Charging_Adaptor.jpg">
+                <img class="img" src="assets/Charging_Adaptor.jpg">
               </li>
               <h5 class="first col-sm-4 col-xs-12">
                 Output on <b>GOOGLE LENS</b> - 
@@ -78,7 +78,7 @@
             <div class="test_image_and_result4 col-xs-12">
               <li class="col-sm-4 col-xs-12">
                 <b class="white4">Test Image - </b>
-                <img class="img" src="/assets/Data_Card.jpg">
+                <img class="img" src="assets/Data_Card.jpg">
               </li>
               <h5 class="first col-sm-4 col-xs-12">
                 Output on <b>GOOGLE LENS</b> - 
@@ -97,7 +97,7 @@
             <div class="test_image_and_result5 col-xs-12">
               <li class="col-sm-4 col-xs-12">
                 <b class="white5">Test Image - </b>
-                <img class="img" src="/assets/EarPhone.jpg">
+                <img class="img" src="assets/EarPhone.jpg">
               </li>
               <h5 class="first col-sm-4 col-xs-12">
                 Output on <b>GOOGLE LENS</b> - 
@@ -116,7 +116,7 @@
             <div class="test_image_and_result6 col-xs-12">
               <li class="col-sm-4 col-xs-12">
                 <b class="white6">Test Image - </b>
-                <img class="img" src="/assets/KeyBoard__Mouse.jpg">
+                <img class="img" src="assets/KeyBoard__Mouse.jpg">
               </li>
               <h5 class="first col-sm-4 col-xs-12">
                 Output on <b>GOOGLE LENS</b> - 
@@ -135,7 +135,7 @@
             <div class="test_image_and_result7 col-xs-12">
               <li class="col-sm-4 col-xs-12">
                 <b class="white7">Test Image - </b>
-                <img class="img" src="/assets/Mouse.jpg">
+                <img class="img" src="assets/Mouse.jpg">
               </li>
               <h5 class="first col-sm-4 col-xs-12">
                 Output on <b>GOOGLE LENS</b> - 
@@ -154,7 +154,7 @@
             <div class="test_image_and_result8 col-xs-12">
               <li class="col-sm-4 col-xs-12">
                 <b class="white8">Test Image - </b>
-                <img class="img" src="/assets/SIM_Card.jpg">
+                <img class="img" src="assets/SIM_Card.jpg">
               </li>
               <h5 class="first col-sm-4 col-xs-12">
                 Output on <b>GOOGLE LENS</b> - 
@@ -173,7 +173,7 @@
             <div class="test_image_and_result9 col-xs-12">
               <li class="col-sm-4 col-xs-12">
                 <b class="white9">Test Image - </b>
-                <img class="img" src="/assets/SIM_Card_Sachet.jpg">
+                <img class="img" src="assets/SIM_Card_Sachet.jpg">
               </li>
               <h5 class="first col-sm-4 col-xs-12">
                 Output on <b>GOOGLE LENS</b> - 
@@ -192,7 +192,7 @@
             <div class="test_image_and_result10 col-xs-12">
                 <li class="col-sm-4 col-xs-12">
                   <b class="white10">Test Image - </b>
-                  <img class="img" src="/assets/USB_Data_Cable.jpg">
+                  <img class="img" src="assets/USB_Data_Cable.jpg">
                 </li>
                 <h5 class="first col-sm-4 col-xs-12">
                   Output on <b>GOOGLE LENS</b> - 
